--- a/Dockerfile.HvacSimulator
+++ b/Dockerfile.HvacSimulator
@@ -1,16 +1,16 @@
 FROM freepascal/fpc:3.2.2-buster-full AS build
 WORKDIR /build
 RUN mkdir src
-COPY src/HvacUnits ./src/HvacUnits
-COPY src/HvacSimulator ./src/HvacSimulator
-WORKDIR /build/src/HvacSimulator
+COPY src/Hvac.Units ./src/Hvac.Units
+COPY src/Hvac.Simulator ./src/Hvac.Simulator
+WORKDIR /build/src/Hvac.Simulator
 RUN ./build.sh release
 
 FROM alpine:3.20 AS runtime
 RUN apk add --no-cache libc6-compat
-RUN adduser -D web
-USER web
+RUN adduser -D simulator
+USER simulator
 WORKDIR /app
-COPY --from=build /build/src/HvacSimulator/out/HvacSimulatorApp .
+COPY --from=build /build/src/Hvac.Simulator/out/HvacSimulator .
 EXPOSE 12416
-ENTRYPOINT ["/app/HvacSimulatorApp"]
+ENTRYPOINT ["/app/Hvac.Simulator"]
