--- a/Dockerfile.Hvac.Simulator
+++ b/Dockerfile.Hvac.Simulator
@@ -6,7 +6,8 @@ COPY src/Hvac.Simulator ./src/Hvac.Simulator
 WORKDIR /build/src/Hvac.Simulator
 RUN ./build.sh release
 
-FROM busybox:1.36-musl AS runtime
+FROM alpine:3.20 AS runtime
+RUN apk add --no-cache libc6-compat
 RUN adduser -D simulator
 USER simulator
 WORKDIR /app
