--- a/Dockerfile.Hvac.Api
+++ b/Dockerfile.Hvac.Api
@@ -1,12 +1,4 @@
-#FROM freepascal/fpc:3.2.2-buster-full AS build
-
-#Note: current FPC image is too old, using this instead
-FROM debian:bookworm-slim AS build
-RUN apt-get update \
-    && apt-get install -y fpc \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/
-
+FROM freepascal/fpc:3.2.2-full AS build
 WORKDIR /build
 RUN mkdir src
 COPY src/Hvac.Units ./src/Hvac.Units
@@ -14,8 +6,7 @@ COPY src/Hvac.Api ./src/Hvac.Api
 WORKDIR /build/src/Hvac.Api
 RUN ./build.sh release
 
-FROM alpine:3.16 AS runtime
-#FROM alpine:3.20 AS runtime
+FROM alpine:3.20 AS runtime
 RUN apk add --no-cache libc6-compat
 RUN adduser -D web
 USER web
